Fixing wrapping Steam Deck messages

--- a/rest/gaugin_styles/style/steam-deck.css
+++ b/rest/gaugin_styles/style/steam-deck.css
@@ -11,7 +11,7 @@ ul {
 
     & li {
 
-        & flex-items.nowrapCSS {
+        & flex-items.nowrap {
             flex-wrap: nowrap;
         }
 
